--- a/config/database.yml
+++ b/config/database.yml
@@ -13,13 +13,13 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: milk 
-  password: kakaobeans
+  username: root
+  password: rootpass
   socket: /tmp/mysql.sock
 
 development:
   <<: *default
-  database: chocorate 
+  database: chocorate
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
